@@ -1,5 +1,9 @@
 2013-02-03 Molnar Karoly <molnarkaroly AT users.sf.net>
 
+	* support/scripts/mcs51-disasm.pl: Improved recognition of jump tables.
+
+2013-02-03 Molnar Karoly <molnarkaroly AT users.sf.net>
+
 	* support/scripts/mcs51-disasm.pl: Improved recognition of jump tables and
 	  bugfix.
 
